--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/router": "~12.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "bootstrap": "^5.0.1",
+    "file-saver": "^2.0.5",
+    "lodash": "^4.17.21",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "xlsx": "^0.17.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
